--- a/experiment3/css/style.css
+++ b/experiment3/css/style.css
@@ -13,7 +13,14 @@ body {
     align-items: center;
 }
 
-#canvas-container {
+/* #canvas-container {
     width: 100%;
     height: 600px;
+} */
+
+#canvas-container p {
+    color: #333; /* Set the text color */
+    font-size: 25px; /* Set the font size */
+    text-align: center; /* Center-align the text */
+    margin-top: 10px; /* Add margin above the text */
 }
